tests/core/ill-typed/unexpected-type-for-expression/bad-succ-1.stella
language core;

fn main(x : Nat) -> Nat {
    return succ(succ(succ(if true then succ(false) else 0)));
}